--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,19 @@
 body {
     background-color: rgb(0, 0, 0);
     color: black;
+    font-family: 'Rubik', sans-serif;
 }
 
 #dough-lab {
     position: absolute;
-    width: 30%;
-    height: 30%;
-    left: 3%;
+    width: 40%;
+    height: 37%;
+    left: 10%;
     transition: 2s;
+    top: 2%;
 }
 
 #dough-lab:hover {
-    position: absolute;
-    height: 30%;
-    left: 3%;
     filter: hue-rotate(360deg);
     transition: 2s;
 }
@@ -30,47 +29,67 @@ body {
 #links-container {
     left: 1%;
     position: absolute;
-    top: 33%;
+    top: 42%;
     height: auto;
-    width: 60%;
+    width: 58%;
     border-style: solid;
-    border-color: rgb(155, 0, 179);
+    border-color: purple;
     border-radius: 10px;
+    border-width: 3px;
 }
 
 .link-container {
-    background-color: blue;
+    top: 0%;
+    background-color: rgb(0, 0, 108);
     display: inline-block;
-    width: 20%;
-    color: white;
-    padding: 3%;
-    margin: 2%;
+    width: 22%;
     position: relative;
+    padding: 2%;
+    margin: 2%;
+    vertical-align: top;
+    border-radius: 15px;
     transition: 0.7s;
 }
 
 .link-container:hover {
-    background-color: rgb(230, 0, 255);
-    display: inline-block;
-    width: 25%;
-    color: white;
-    padding: 3%;
-    margin: 2%;
-    position: relative;
-    font-size: 125%;
+    background-color: rgb(214, 76, 189);
+    color: black;
+    width: 24%;
     transition: 0.7s;
+    font-size: 109%;
 }
 
 .link-desc {
-    padding: 2%;
+    padding: 1%;
+    text-align: center;
+        color: rgb(182, 162, 254);
 }
 
 #dough-loops {
+    width: 100%;
+    /* left: 3%; */
+    top: 0%;
+    transition: 0.7s;
+    border-radius: 8%;
+}
+
+#chord-finder {
     width: 100%;
     left: 3%;
     top: 0%;
     transition: 0.7s;
     border-radius: 3%;
+}
+
+#spotify-link {
+    text-align: center;
+    font-size: 200%;
+    color: rgb(76, 221, 40);
+    text-shadow: 2px 2px 8px rgb(0, 0, 0);
+}
+
+a {
+    text-decoration: none;
 }
 
 
@@ -83,11 +102,48 @@ body {
     position: absolute;
     top: 5%;
     height: 90%;
-    left: 65%;
-    width: 30%;
+    left: 62%;
+    width: 35%;
     border-style: solid;
-    border-color: rgb(155, 0, 179);
+    border-color: purple;
     border-radius: 10px;
-    background-color: brown;
+    border-width: 3px;
+    background-color: rgb(0, 0, 108);
+    background-image: linear-gradient(rgb(0, 0, 108),rgb(127, 0, 123));
+    color: rgb(182, 162, 254);
+    text-shadow: -2px -1px 3px rgb(41, 0, 65);
+    text-align: center;
 }
 
+#self-desc {
+    font-size: 125%;
+    padding: 1%;
+}
+
+#github-link {
+    position: absolute;
+    left: 30%;
+    bottom: 5%;
+    font-size: 350%;
+    color: rgb(200, 100, 0);
+    transition: 0.3s;
+}
+
+#linkedin-link {
+    position: absolute;
+    right: 30%;
+    bottom: 5%;
+    font-size: 350%;
+    color: rgb(200, 100, 0);
+    transition: 0.3s;
+}
+
+#github-link:hover {
+    color: rgb(255, 0, 225);
+    transition: 0.3s;
+}
+
+#linkedin-link:hover {
+    color: rgb(255, 0, 225);
+    transition: 0.3s;
+}
